Update homepage URL to match GitHub repository

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "rental-car-react",
-	"homepage": "https://Suraj-tours.github.io/RentalCar",
+	"homepage": "https://SurajToursServices.github.io/SurajTours",
 	"version": "1.0.0",
 	"private": true,
 	"dependencies": {
